--- a/custom_components/solarman_api/manifest.json
+++ b/custom_components/solarman_api/manifest.json
@@ -4,10 +4,10 @@
   "codeowners": ["@daspilker"],
   "config_flow": true,
   "documentation": "https://github.com/daspilker/home-assistant-solarman-api",
-  "issue_tracker": "https://github.com/daspilker/home-assistant-solarman-api/issues",
   "integration_type": "service",
   "iot_class": "cloud_polling",
+  "issue_tracker": "https://github.com/daspilker/home-assistant-solarman-api/issues",
   "quality_scale": "bronze",
-  "version": "1.0.0",
-  "requirements": []
+  "requirements": [],
+  "version": "1.0.0"
 }
